--- a/contact.html
+++ b/contact.html
@@ -152,9 +152,9 @@
         <div class="nav">
             <a href="index.html"><b>Home</b></a>
             <a href="study_mate.html"><b>Study Materials</b></a>
-            <a href="Python Learning/index.html"><b>Python Learning</b></a>
+            <a href="#"><b>Python Learning</b></a>
             <a href="compiler.html"><b>Python Compiler</b></a>
-            <a href="aboutus.html"><b>About Us</b></a>
+            <a href="#"><b>About Us</b></a>
             <a href="login.html" id="login-link"><b>Login</b></a>
             <a href="register.html" id="register-link"><b>Register</b></a>
             <button  id="logout-btn" style="display:none; " onclick="logout()"><b>Logout</b></button>
@@ -165,9 +165,9 @@
         <span class="close-btn" onclick="toggleSidebar()">&times;</span>
         <a href="index.html"><b>Home</b></a>
         <a href="study_mate.html"><b>Study Materials</b></a>
-        <a href="Python Learning/index.html"><b>Python Learning</b></a>
+        <a href="#"><b>Python Learning</b></a>
         <a href="compiler.html"><b>Python Compiler</b></a>
-        <a href="aboutus.html"><b>About Us</b></a>
+        <a href="#"><b>About Us</b></a>
         <a href="login.html" id="login-link2"><b>Login</b></a>
         <a href="register.html" id="register-link2"><b>Register</b></a>
         <a><button id="logout-btn2" style="display:none;" onclick="logout()"><b>Logout</b></button></a>
