--- a/study_mate.html
+++ b/study_mate.html
@@ -66,13 +66,21 @@
             <!-- <div class="file" data-src="Notes/MAP/S-22.pdf">📄 Summer-22</div> -->
         </div>
 
-        <!-- <div class="folder" onclick="toggleFolder('research')">📁 Research Papers</div>
+         <div class="folder" onclick="toggleFolder('research')">📁 Python Manual</div>
         <div id="research" class="folder-content">
-            <div class="file" data-src="research1.pdf">📄 Research Paper 1</div>
-            <div class="file" data-src="research2.pdf">📄 Research Paper 2</div>
+            <div class="file" data-src="pract1.pdf">📄 Practical 1</div>
+            <div class="file" data-src="pract2.pdf">📄 Practical 2</div>
+            <div class="file" data-src="pract3.pdf">📄 Practical 3</div>
+            <div class="file" data-src="pract4.pdf">📄 Practical 4</div>
+            <div class="file" data-src="pract5.pdf">📄 Practical 5</div>
+            <div class="file" data-src="pract6.pdf">📄 Practical 6</div>
+            <div class="file" data-src="pract7.pdf">📄 Practical 7</div>
+            <div class="file" data-src="pract8.pdf">📄 Practical 8</div>
+            <div class="file" data-src="pract9.pdf">📄 Practical 9</div>
+            <div class="file" data-src="pract10.pdf">📄 Practical 10</div>
         </div>
 
-        <div class="folder exclusive" onclick="toggleFolder('exclusive')">🔒 Exclusive PDFs</div>
+        <!--<div class="folder exclusive" onclick="toggleFolder('exclusive')">🔒 Exclusive PDFs</div>
         <div id="exclusive" class="folder-content restricted">
             <div class="file" data-src="exclusive1.pdf">📄 Exclusive PDF 1</div>
             <div class="file" data-src="exclusive2.pdf">📄 Exclusive PDF 2</div>
