--- a/study_mate.html
+++ b/study_mate.html
@@ -68,16 +68,16 @@
 
          <div class="folder" onclick="toggleFolder('research')">📁 Python Manual</div>
         <div id="research" class="folder-content">
-            <div class="file" data-src="pract1.pdf">📄 Practical 1</div>
-            <div class="file" data-src="pract2.pdf">📄 Practical 2</div>
-            <div class="file" data-src="pract3.pdf">📄 Practical 3</div>
-            <div class="file" data-src="pract4.pdf">📄 Practical 4</div>
-            <div class="file" data-src="pract5.pdf">📄 Practical 5</div>
-            <div class="file" data-src="pract6.pdf">📄 Practical 6</div>
-            <div class="file" data-src="pract7.pdf">📄 Practical 7</div>
-            <div class="file" data-src="pract8.pdf">📄 Practical 8</div>
-            <div class="file" data-src="pract9.pdf">📄 Practical 9</div>
-            <div class="file" data-src="pract10.pdf">📄 Practical 10</div>
+            <div class="file" data-src="Notes/Manual/pract1.pdf">📄 Practical 1</div>
+            <div class="file" data-src="Notes/Manual/pract2.pdf">📄 Practical 2</div>
+            <div class="file" data-src="Notes/Manual/pract3.pdf">📄 Practical 3</div>
+            <div class="file" data-src="Notes/Manual/pract4.pdf">📄 Practical 4</div>
+            <div class="file" data-src="Notes/Manual/pract5.pdf">📄 Practical 5</div>
+            <div class="file" data-src="Notes/Manual/pract6.pdf">📄 Practical 6</div>
+            <div class="file" data-src="Notes/Manual/pract7.pdf">📄 Practical 7</div>
+            <div class="file" data-src="Notes/Manual/pract8.pdf">📄 Practical 8</div>
+            <div class="file" data-src="Notes/Manual/pract9.pdf">📄 Practical 9</div>
+            <div class="file" data-src="Notes/Manual/pract10.pdf">📄 Practical 10</div>
         </div>
 
         <!--<div class="folder exclusive" onclick="toggleFolder('exclusive')">🔒 Exclusive PDFs</div>
